# NiloticNetworkBlockchain

./: .gitignore  API_DOCUMENTATION.md  BLOCKCHAIN_ANALYSIS.md  BLOCKCHAIN_FINAL_REPORT.md  CLEANUP_SUMMARY.md  CMakeLists.txt  DOCUMENTATION.md  ENHANCED_FEATURES.md  FAST_TRANSACTIONS_IMPLEMENTATION.md  IMPROVED_TRANSACTION_SPEED.cpp  INSTALL.md  INTEGRATION_SUMMARY.md  PORC_DOCUMENTATION.md  PORC_IMPLEMENTATION_README.md  PORC_IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  REAL_DATABASE_IMPLEMENTATION.md  REAL_DATA_INTEGRATION.md  SECURITY_AUDIT_REPORT.md  TRANSACTION_CONFIRMATION_EXPLANATION.md  TRANSACTION_SPEED_SUMMARY.md  USER_MANAGEMENT_SYSTEM.md  WALLET_VERIFICATION_GUIDE.md  WALLET_VERIFICATION_SUMMARY.md  apply_fast_transactions.sh  build.sh  create_sample_wallet.py  create_sample_wallet_simple.py  generate_wallet.py  sample_wallet.json  test_blockchain_interactions.sh
docs/api/: README.md
include/core/: api.h  block.h  blockchain.h  json.hpp  logger.h  mining.h  networking.h  oderoslw.h  optimized_blockchain.h  persistence.h  porc.h  smart_contract_vm.h  transaction.h  transaction_types.h  utils.h  wallet.h
lib/asio/: asio.hpp
scripts/: test_porc.sh
scripts/deploy/: deploy.sh
scripts/test/: run_all_tests.sh  run_integration_tests.sh  run_unit_tests.sh
src/core/: api.cpp  block.cpp  blockchain.cpp  logger.cpp  main.cpp  mining.cpp  networking.cpp  oderoslw.cpp  optimized_api.cpp  persistence.cpp  persistence_simple.cpp  porc.cpp  transaction.cpp  utils.cpp  wallet.cpp
web/dapps/Parrot/: DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md
web/dapps/sulwestake/: BLOCKCHAIN_SYNC_SYSTEM.md  DEPLOYMENT.md  README.md  REAL_BLOCKCHAIN_INTEGRATION.md  SEND_RECEIVE_FEATURES.md  (+9 more)
web/wallet/: MINING_README.md  README.md  dapp_sdk.js  dapp_template.html  enhanced_wallet.html  get_wallet_address.py  index.html  miner.py  nilotic_wallet.py  optimized_wallet.html  requirements.txt
(+79 files in other folders)
